--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@dethdkn/eslint-config": "^2.0.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@dethdkn/eslint-config": "^2.0.3",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.21.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "3",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.7.3"
   }
 }
